feat: add api/banners/{page} method
